--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,13 +1,5 @@
-<header class="header">
-  <nav class="nav">
-    <ul class="nav-list">
-      <li class="nav-item">
-        <a href="./page-2.html" class="nav-link">Page 2</a>
-      </li>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt recusandae sapiente laudantium natus nisi facilis
+  fugit error! Esse cum doloremque temporibus, ipsum magnam totam fugiat aut autem modi illum aliquam.</p>
 
-      <li class="nav-item">
-        <a href="./page-3.html" class="nav-link">Page 3</a>
-      </li>
-    </ul>
-  </nav>
-</header>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, culpa eligendi porro hic aspernatur totam nisi,
+  quaerat enim corrupti placeat corporis, velit iusto distinctio consequatur optio rerum quam doloribus dolorum.</p>
