--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,4 @@
+<h1>Привіт</h1>
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt recusandae sapiente laudantium natus nisi facilis
   fugit error! Esse cum doloremque temporibus, ipsum magnam totam fugiat aut autem modi illum aliquam.</p>
 
