--- a/src/css/general.css
+++ b/src/css/general.css
@@ -29,6 +29,12 @@
   }
 }
 
+.section {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* =============================================================================================
 ================================================================================================
 ================================================================================================ */
