added fix burger-menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,92 +1,45 @@
-<div class="header-div conteiner">
-        <nav class="header-nav">
-          <a class="header-link" href="./index.html"
-            >SIMPLY CHOCOLATE
-            <svg class="header-logo">
-              <use href="./icon.svg#icon-chocolate"></use>
-            </svg>
-          </a>
-          <ul class="header-list">
-            <li class="header-nav-li">
-              <a class="header-nav-link" href="./index.html">Home</a>
-            </li>
-            <li class="header-nav-li">
-              <a class="header-nav-link" href="">How it’s made?</a>
-            </li>
-            <li class="header-nav-li">
-              <a class="header-nav-link" href="">Our products</a>
-            </li>
-            <li class="header-nav-li">
-              <a class="header-nav-link" href="">Top sellers</a>
-            </li>
-            <li class="header-nav-li">
-              <a class="header-nav-link" href="">Chocolate is loved</a>
-            </li>
-          </ul>
-          <ul class="header-list-messeng">
-            <li>
-              <svg class="header-icon-messeng">
-                <use href="./icon.svg#icon-instagram"></use>
-              </svg>
-            </li>
-            <li>
-              <svg class="header-icon-messeng">
-                <use href="./icon.svg#icon-twitter"></use>
-              </svg>
-            </li>
-          </ul>
-        </nav>
-        <button
-          type="button"
-          class="butto-open-mobile js-open-menu"
-          aria-expanded="false"
-          aria-controls="mobile-menu"
-        >
-          <svg class="header-burger-menu">
-            <use stroke="#111111" href="./icon.svg#icon-Vector-3"></use>
-          </svg>
-        </button>
-      </div>
-    </header>
-
-    <div class="modal-mobile-menu js-menu-container" id="mobile-menu">
-      <button type="button" class="close-button-mobile js-close-menu">
-        <svg class="mobile-icon-close">
-          <use href="./icon.svg#icon-x"></use>
+<header>
+  <div class="header-div container">
+    <nav class="header-nav">
+      <a class="header-link" href="./index.html">SIMPLY CHOCOLATE
+        <svg class="header-logo">
+          <use href="./icon.svg#icon-chocolate"></use>
         </svg>
-      </button>
-
-      <ul class="modal-mobile-list">
-        <li>
-          <a class="mobile-menu-link" href="./index.html">Home</a>
+      </a>
+      <ul class="header-list">
+        <li class="header-nav-li">
+          <a class="header-nav-link" href="./index.html">Home</a>
         </li>
-        <li>
-          <a class="mobile-menu-link" href="">How it’s made?</a>
+        <li class="header-nav-li">
+          <a class="header-nav-link" href="">How it’s made?</a>
         </li>
-        <li>
-          <a class="mobile-menu-link" href="">Our products</a>
+        <li class="header-nav-li">
+          <a class="header-nav-link" href="">Our products</a>
         </li>
-        <li>
-          <a class="mobile-menu-link" href="">Top sellers</a>
+        <li class="header-nav-li">
+          <a class="header-nav-link" href="">Top sellers</a>
         </li>
-        <li>
-          <a class="mobile-menu-link" href="">Chocolate is loved</a>
-        </li>
-      </ul>
-      <ul class="mobile-menu-icon-list">
-        <li>
-          <a class="mobile-menu-icon-messeg" href="https://Instagram.com">
-            <svg class="mobile-menu-icon-svg">
-              <use href="./icon.svg#icon-instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a class="mobile-menu-icon-messeg" href="https://Youtube.com">
-            <svg class="mobile-menu-icon-svg">
-              <use href="./icon.svg#icon-twitter"></use>
-            </svg>
-          </a>
+        <li class="header-nav-li">
+          <a class="header-nav-link" href="">Chocolate is loved</a>
         </li>
       </ul>
-    </div>
+      <ul class="header-list-messeng">
+        <li>
+          <svg class="header-icon-messeng">
+            <use href="./icon.svg#icon-instagram"></use>
+          </svg>
+        </li>
+        <li>
+          <svg class="header-icon-messeng">
+            <use href="./icon.svg#icon-twitter"></use>
+          </svg>
+        </li>
+      </ul>
+    </nav>
+    <button type="button" class="butto-open-mobile js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+      <svg class="header-burger-menu">
+        <use stroke="#111111" href="./icon.svg#icon-Vector-3"></use>
+      </svg>
+    </button>
+  </div>
+</header>
