--- a/src/css/general.css
+++ b/src/css/general.css
@@ -31,6 +31,7 @@
 
 .section {
   max-width: 1200px;
+  padding-bottom: 128px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -43,8 +44,8 @@
 
 .logo {
   font-weight: 700;
-  font-size: 18px;
-  line-height: 1.11;
+  font-size: 14px;
+  line-height: 1.29;
 
   letter-spacing: -0.03em;
   color: var(--main-dark-text-color);
