розмітка sellers-html

--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -3,13 +3,8 @@
         <h2 class="top-sellers">TOP <span class="sellers">SELLERS</span></h2>
         <ul class="top-list list">
             <li class="top-item">
-                
-                <img 
-                 srcset="
-                 /img/top_sellers/choco-one-mobile@1x.jpg 
-                 /img/top_sellers/choco-one-mobile@2x.jpg 
-                 "
-                src="/img/top_sellers/choco-one-mobile@1x.jpg" alt="" width="335" height="464">
+
+                <img src="../img/top_sellers/choco-one-mobile@1x.jpg" alt="" width="335" height="464">
                 <p class="top-paragraph">Crazy enough chocolate originates from a bean just like the coffee bean called
                     Cacao. Cacao has
                     been around for
