--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -4,7 +4,7 @@
         <ul class="top-list list">
             <li class="top-item">
 
-                <img src="../img/top_sellers/choco-one-mobile@1x.jpg" alt="" width="335" height="464">
+                <img src="" alt="" width="335" height="464">
                 <p class="top-paragraph">Crazy enough chocolate originates from a bean just like the coffee bean called
                     Cacao. Cacao has
                     been around for
@@ -12,7 +12,7 @@
                 </p>
             </li>
             <li class="top-item">
-                <img src="../img/top_sellers/choco-two-mobile@1x.jpg" alt="" width="335" height="464">
+                <img src="" alt="" width="335" height="464">
                 <button type="submit" class="top-button">Buy now</button>
             </li>
         </ul>
