add css (part1)

--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -1,32 +1,46 @@
-<section class="section-how">
-  <h2>How it’s <span>made</span>?</h2>
-  <div
-    class="features-video plyr__video-embed"
-    id="features-player"
-    data-poster="./img/features/poster.jpg"
-  >
-    <iframe
-      src="https://www.youtube.com/embed/2H0tglcIKsM?autoplay=0&modestbranding=1&controls=0&disablekb=1&playsinline=1&cc_load_policy=1&cc_lang_pref=auto&widget_referrer=https%3A%2F%2Fplyr.io%2F%23youtube&rel=0&showinfo=0&iv_load_policy=3&modestbranding=1&customControls=true&noCookie=false&enablejsapi=1&origin=https%3A%2F%2Fplyr.io&widgetid=1"
-      allowfullscreen
-      allowtransparency
-      allow="autoplay"
-    ></iframe>
+<section class="section">
+  <div class="container made-container">
+    <h2 class="section-title made-title">
+      How it’s <span class="title-accent">made</span>?
+    </h2>
+    <div class="made-flex">
+      <div
+        class="features-video plyr__video-embed made-blok-video"
+        id="features-player"
+        data-poster="./img/how_it’s_made/cover-mobile@1x.jpg"
+      >
+        <iframe
+          src="https://www.youtube.com/embed/2H0tglcIKsM?autoplay=0&modestbranding=1&controls=0&disablekb=1&playsinline=1&cc_load_policy=1&cc_lang_pref=auto&widget_referrer=https%3A%2F%2Fplyr.io%2F%23youtube&rel=0&showinfo=0&iv_load_policy=3&modestbranding=1&customControls=true&noCookie=false&enablejsapi=1&origin=https%3A%2F%2Fplyr.io&widgetid=1"
+          allowfullscreen
+          allowtransparency
+          allow="autoplay"
+        ></iframe>
+      </div>
+      <div class="made-blok">
+        <h3 class="section-subtitle made-subtitle">
+          Try our chocolates today and discover the perfect balance of flavor
+        </h3>
+        <ul class="list section-text made-text">
+          <li class="made-list-item">
+            Heat the milk in a saucepan without bringing it to a boil. Add sugar
+            and cocoa powder.
+          </li>
+          <li class="made-list-item">
+            At the same time, prepare a water bath. Melt the butter on it.
+          </li>
+          <li class="made-list-item">
+            "Mix" the milk mixture and already liquid butter. Mix thoroughly
+            with a silicone spatula so that the mass becomes uniform and silky.
+          </li>
+          <li class="made-list-item">
+            Heat the mixture over low heat, letting it barely boil.
+          </li>
+          <li class="made-list-item">
+            Pour the chocolate into special containers (can be replaced with ice
+            molds). Allow to cool and harden.
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
-  <h3>Try our chocolates today and discover the perfect balance of flavor</h3>
-  <ul>
-    <li>
-      Heat the milk in a saucepan without bringing it to a boil. Add sugar and
-      cocoa powder.
-    </li>
-    <li>At the same time, prepare a water bath. Melt the butter on it.</li>
-    <li>
-      "Mix" the milk mixture and already liquid butter. Mix thoroughly with a
-      silicone spatula so that the mass becomes uniform and silky.
-    </li>
-    <li>Heat the mixture over low heat, letting it barely boil.</li>
-    <li>
-      Pour the chocolate into special containers (can be replaced with ice
-      molds). Allow to cool and harden.
-    </li>
-  </ul>
 </section>
