стилі для мобілки, планшету та дисктопа

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,44 +1,63 @@
 <header>
   <div class="header-div container">
     <nav class="header-nav">
-      <a class="header-link" href="./index.html">SIMPLY CHOCOLATE
+      <a class="logo header-link link" href="./index.html"
+        >SIMPLY CHOCOLATE
         <svg class="header-logo">
-          <use href="./icon.svg#icon-chocolate"></use>
+          <use href="../img/choco-icons.svg#icon-chocolate"></use>
         </svg>
       </a>
-      <ul class="header-list">
+      <ul class="header-list list">
         <li class="header-nav-li">
-          <a class="header-nav-link" href="./index.html">Home</a>
+          <a class="header-nav-link menu-link link" href="./index.html">Home</a>
         </li>
         <li class="header-nav-li">
-          <a class="header-nav-link" href="">How it’s made?</a>
+          <a class="header-nav-link menu-link link" href="">How it’s made?</a>
         </li>
         <li class="header-nav-li">
-          <a class="header-nav-link" href="">Our products</a>
+          <a class="header-nav-link menu-link link" href="">Our products</a>
         </li>
         <li class="header-nav-li">
-          <a class="header-nav-link" href="">Top sellers</a>
+          <a class="header-nav-link menu-link link" href="">Top sellers</a>
         </li>
         <li class="header-nav-li">
-          <a class="header-nav-link" href="">Chocolate is loved</a>
+          <a class="header-nav-link menu-link link" href=""
+            >Chocolate is loved</a
+          >
         </li>
       </ul>
-      <ul class="header-list-messeng">
-        <li>
-          <svg class="header-icon-messeng">
-            <use href="./icon.svg#icon-instagram"></use>
-          </svg>
-        </li>
-        <li>
-          <svg class="header-icon-messeng">
-            <use href="./icon.svg#icon-twitter"></use>
-          </svg>
-        </li>
-      </ul>
+      <!-- icon desktop -->
+      <div>
+        <ul class="header-list-messeng list">
+          <li>
+            <a class="header-icon-link" href="https://instagram.com">
+              <svg class="header-icon-messeng">
+                <use href="../img/choco-icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="header-icon-link" href="https://twitter.com">
+              <svg class="header-icon-messeng">
+                <use href="../img/choco-icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </nav>
-    <button type="button" class="butto-open-mobile js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+    <!-- mobile burg-menu -->
+    <button
+      type="button"
+      class="butto-open-mobile data-modal-open"
+      aria-expanded="false"
+      aria-controls="mobile-menu"
+    >
       <svg class="header-burger-menu">
-        <use stroke="#111111" href="./icon.svg#icon-Vector-3"></use>
+        <use
+          stroke="#111111"
+          href="../img/choco-icons.svg#icon-burger-menu"
+        ></use>
       </svg>
     </button>
   </div>
