add css (part2)-video

--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -14,7 +14,13 @@
           allowfullscreen
           allowtransparency
           allow="autoplay"
-        ></iframe>
+          width="100%"
+          height="100%"
+        >
+          <p>
+            Your browser does not support the <code>video</code> element.
+          </p></iframe
+        >
       </div>
       <div class="made-blok">
         <h3 class="section-subtitle made-subtitle">
