--- a/src/css/made.css
+++ b/src/css/made.css
@@ -23,9 +23,23 @@
     width: 100%;
   }
 }
+
+.made-blok-video {
+  max-width: 335px;
+  max-height: 500px;
+}
+
+@media only screen and (min-width: 768px) {
+  .made-blok-video {
+    max-width: 614px;
+    max-height: 400px;
+  }
+}
+
 @media only screen and (min-width: 1200px) {
   .made-blok-video {
     width: 600px;
+    height: 400px;
   }
 }
 
