css mobile tablet dekspot

--- a/src/css/general.css
+++ b/src/css/general.css
@@ -116,7 +116,7 @@
 .section-text {
   font-size: 14px;
   line-height: 1.29;
-
+  letter-spacing: -0.02em;
   color: var(--main-dark-text-color);
 }
 
