--- a/src/partials/components.html
+++ b/src/partials/components.html
@@ -1,7 +1,10 @@
-<section class="components-section">
+<section class="section components-section">
   <div class="container">
-    <h2>IT ALL ADDS UP TO ONE EXCEPTIONAL <span>TASTE</span> SENSATION</h2>
-    <p>
+    <h2 class="section-title components-title">
+      IT ALL ADDS UP TO ONE EXCEPTIONAL
+      <span class="title-accent">TASTE</span> SENSATION
+    </h2>
+    <p class="section-text components-text">
       At Simply Chocolate, we believe that the secret to exceptional chocolate
       is in the details. From the sourcing of the finest ingredients to the
       careful crafting of each individual piece, every step of our process adds
@@ -10,17 +13,28 @@
 
     <ul class="components-list list">
       <li class="components-item">
-        <img src="" alt="chocolate" width="224" />
-        <h2>milk chocolate</h2>
+        <img
+          class="components-img"
+          srcset="
+            ../img/unique_components/chocolate-mobile-tablet@1x.png 224w,
+            ../img/unique_components/chocolate-mobile-tablet@2x.png 448w,
+            ../img/unique_components/chocolate@1x.png               206w,
+            ../components-img/unique_components/chocolate@2x.png    412w
+          "
+          sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
+          src="../img/unique_components/chocolate-mobile-tablet@1x.png"
+          alt="chocolate"
+        />
+        <h3 class="components-subtitle">milk chocolate</h3>
 
         <!-- overlay -->
         <div class="overlay-thumba">
-          <h3>milk chokolate</h3>
-          <ul>
-            <li>chocolate</li>
-            <li>the benefits</li>
+          <h3 class="section-subtitle overlay-subtitle">milk chocolate</h3>
+          <ul class="overlay-list">
+            <li class="overlay-btn overlay-components">chocolate</li>
+            <li class="overlay-btn overlay-components list">the benefits</li>
           </ul>
-          <p>
+          <p class="section-text">
             Milk chocolate is a solid chocolate confectionery containing cocoa,
             sugar and milk. It is the most consumed type of chocolate. Chocolate
             was originally sold and consumed as a beverage in pre-Columbian
@@ -30,15 +44,27 @@
         </div>
       </li>
       <li class="components-item">
-        <img src="" alt="" />
-        <h3>Milk</h3>
+        <img
+          class="components-img"
+          srcset="
+            ../img/unique_components/milk-mobile-tablet@1x.png 224w,
+            ../img/unique_components/milk-mobile-tablet@2x.png 448w,
+            ../img/unique_components/milk@1x.png               206w,
+            ../components-img/unique_components/milk@2x.png    412w
+          "
+          sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
+          src="../img/unique_components/milk-mobile-tablet@1x.png"
+          alt=""
+        />
+        <h3 class="components-subtitle">Milk</h3>
+        <!-- overlay -->
         <div class="overlay-thumba">
-          <h2>Milk</h2>
-          <ul>
-            <li>milk</li>
-            <li>the benefits</li>
+          <h3 class="section-subtitle overlay-subtitle">Milk</h3>
+          <ul class="overlay-list">
+            <li class="overlay-btn overlay-components">milk</li>
+            <li class="overlay-btn overlay-components list">the benefits</li>
           </ul>
-          <p>
+          <p class="section-text">
             Milk chocolate is a solid chocolate confectionery containing cocoa,
             sugar and milk. It is the most consumed type of chocolate. Chocolate
             was originally sold and consumed as a beverage in pre-Columbian
@@ -48,17 +74,28 @@
         </div>
       </li>
       <li class="components-item">
-        <img src="" alt="" />
+        <img
+          class="components-img"
+          srcset="
+            ../img/unique_components/nuts-mobile-tablet@1x.png 224w,
+            ../img/unique_components/nuts-mobile-tablet@2x.png 448w,
+            ../img/unique_components/nuts@1x.png               206w,
+            ../components-img/unique_components/nuts@2x.png    412w
+          "
+          sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
+          src="../img/unique_components/nuts-mobile-tablet@1x.png"
+          alt=""
+        />
 
-        <h2>nuts</h2>
+        <h3 class="components-subtitle">nuts</h3>
         <!-- overlay -->
         <div class="overlay-thumba">
-          <h3>nuts</h3>
-          <ul>
-            <li>nuts</li>
-            <li>the benefits</li>
+          <h3 class="section-subtitle overlay-subtitle">nuts</h3>
+          <ul class="overlay-list">
+            <li class="overlay-btn overlay-components">nuts</li>
+            <li class="overlay-btn overlay-components list">the benefits</li>
           </ul>
-          <p>
+          <p class="section-text">
             Milk chocolate is a solid chocolate confectionery containing cocoa,
             sugar and milk. It is the most consumed type of chocolate. Chocolate
             was originally sold and consumed as a beverage in pre-Columbian
@@ -68,17 +105,30 @@
         </div>
       </li>
       <li class="components-item">
-        <img src="" alt="" />
-        <h3>SEMI - SWEET CHOCOLATE</h3>
+        <img
+          class="components-img"
+          srcset="
+            ../img/unique_components/coffee-mobile-tablet@1x.png 224w,
+            ../img/unique_components/coffee-mobile-tablet@2x.png 448w,
+            ../img/unique_components/coffe@1x.png                206w,
+            ../components-img/unique_components/coffee@2x.png    412w
+          "
+          sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
+          src="../img/unique_components/coffee-mobile-tablet@1x.png"
+          alt=""
+        />
+        <h3 class="components-subtitle">SEMI - SWEET CHOCOLATE</h3>
 
         <!-- overlay -->
         <div class="overlay-thumba">
-          <h2>semi - sweet chocolate</h2>
-          <ul>
-            <li>sweet chocolate</li>
-            <li>the benefits</li>
+          <h3 class="section-subtitle overlay-subtitle">
+            semi - sweet chocolate
+          </h3>
+          <ul class="overlay-list">
+            <li class="overlay-btn overlay-components">sweet chocolate</li>
+            <li class="overlay-btn overlay-components list">the benefits</li>
           </ul>
-          <p>
+          <p class="section-text">
             Milk chocolate is a solid chocolate confectionery containing cocoa,
             sugar and milk. It is the most consumed type of chocolate. Chocolate
             was originally sold and consumed as a beverage in pre-Columbian
