cтилі header (виправлення помилок)

--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -1,5 +1,5 @@
-<div class="modal-mobile-menu data-modal" id="mobile-menu">
-  <button type="button" class="close-button-mobile data-modal-close">
+<div data-modal class="modal-mobile-menu" id="mobile-menu">
+  <button type="button" class="close-button-mobile" data-modal-close>
     <svg class="mobile-icon-close">
       <use href="./icon.svg#icon-x"></use>
     </svg>
