--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,14 +30,24 @@
       <div>
         <ul class="header-list-messeng list">
           <li>
-            <a class="header-icon-link" href="https://instagram.com">
+            <a
+              class="header-icon-link"
+              target="_blank"
+              href="https://instagram.com"
+              rel="noopener noreferrer"
+            >
               <svg class="header-icon-messeng">
                 <use href="../img/choco-icons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
           <li>
-            <a class="header-icon-link" href="https://twitter.com">
+            <a
+              class="header-icon-link"
+              target="_blank"
+              href="https://twitter.com"
+              rel="noopener noreferrer"
+            >
               <svg class="header-icon-messeng">
                 <use href="../img/choco-icons.svg#icon-twitter"></use>
               </svg>
@@ -48,16 +58,14 @@
     </nav>
     <!-- mobile burg-menu -->
     <button
+      data-modal-open
       type="button"
-      class="butto-open-mobile data-modal-open"
+      class="button-open-mobile"
       aria-expanded="false"
       aria-controls="mobile-menu"
     >
-      <svg class="header-burger-menu">
-        <use
-          stroke="#111111"
-          href="../img/choco-icons.svg#icon-burger-menu"
-        ></use>
+      <svg class="header-burger-menu" stroke="#111111">
+        <use href="../img/choco-icons.svg#icon-burger-menu"></use>
       </svg>
     </button>
   </div>
