--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,29 +3,13 @@
   padding-top: 20px;
   padding-bottom: 14px;
 }
-@media only screen and (min-width: 768px) {
-  .header-div {
-    padding-top: 24px;
-    padding-bottom: 24px;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .header-div {
-    padding-top: 24px;
-    padding-bottom: 32px;
-  }
-}
+
 /* logo and icon */
 .header-logo {
   width: 21px;
   max-height: 21px;
 }
-@media only screen and (min-width: 1200px) {
-  .header-logo {
-    width: 28px;
-    max-height: 24px;
-  }
-}
+
 .header-icon-messeng {
   fill: transparent;
   stroke: var(--main-dark-text-color);
@@ -40,13 +24,8 @@
   width: 25px;
   max-height: 28px;
 }
-@media only screen and (min-width: 768hpx) {
-  .header-burger-menu {
-    width: 28px;
-    max-height: 32px;
-  }
-}
-.butto-open-mobile {
+
+.button-open-mobile {
   border: none;
   outline: none;
   background-color: transparent;
@@ -54,17 +33,7 @@
   width: 28px;
   max-height: 28px;
 }
-@media only screen and (min-width: 768px) {
-  .butto-open-mobile {
-    width: 32px;
-    max-height: 32px;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .butto-open-mobile {
-    display: none;
-  }
-}
+
 /* desktop list heder */
 .header-nav {
   display: flex;
@@ -75,22 +44,12 @@
 }
 /* link */
 .header-link {
+  font-style: italic;
   display: flex;
   align-items: center;
   column-gap: 7px;
 }
-@media only screen and (min-width: 1200px) {
-  .header-link {
-    font-size: 18px;
-    line-height: 1.11;
-    letter-spacing: -0.03em;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .header-link {
-    margin-right: 190px;
-  }
-}
+
 .header-nav-link {
   color: var(--main-dark-text-color);
   letter-spacing: -0.02em;
@@ -109,14 +68,67 @@
   column-gap: 24px;
   margin-right: auto;
 }
+
+.header-list-messeng {
+  display: none;
+  column-gap: 18px;
+}
+
+/* tablet */
+@media only screen and (min-width: 768px) {
+  .header-div {
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
+}
+@media only screen and (min-width: 768hpx) {
+  .header-burger-menu {
+    width: 28px;
+    max-height: 32px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .butto-open-mobile {
+    width: 32px;
+    max-height: 32px;
+  }
+}
+
+/* Desktop */
+@media only screen and (min-width: 1200px) {
+  .header-div {
+    padding-top: 24px;
+    padding-bottom: 32px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .header-logo {
+    width: 28px;
+    max-height: 24px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .button-open-mobile {
+    display: none;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .header-link {
+    font-size: 18px;
+    line-height: 1.11;
+    letter-spacing: -0.03em;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .header-link {
+    margin-right: 190px;
+  }
+}
 @media only screen and (min-width: 1200px) {
   .header-list {
     display: flex;
   }
-}
-.header-list-messeng {
-  display: none;
-  column-gap: 18px;
 }
 @media only screen and (min-width: 1200px) {
   .header-list-messeng {
