--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,7 @@
 
 @import url('./variables.css');
 @import url('./reset.css');
+@import url('./fonts.css');
 @import url('./general.css');
 @import url('./header.css');
 @import url('./hero.css');
