--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,51 +1,50 @@
-<section class="section">
-  <div class="container">
-      <h2 class="visually-hidden">Advantages</h2>
-      <ul class="list">
-          <li class="">
-              <div>
-                    <svg class="" width="" height="">
-                    <use href=""></use>
-                  </svg>
-              </div>
-                <h3 class="">Unsurpassed taste</h3>
-                <p class="">
-                    Crafted with the finest quality cocoa beans and a dedication to
-                    perfection, each bite is a decadent experience that simply cannot be
-                    matched. Savor the richness and complexity of our Unsurpassed Taste
-                    and discover a new level of chocolate bliss.
-                </p>
-          
-            </li>
-           <li class="">
-              <div>
-                  <svg class="" width="" height="">
-                      <use href=""></use>
-                  </svg>
-                </div>
-                <h3 class="">Affordable price</h3>
-                <p class="">
-                    Indulge in high-quality chocolate without breaking the bank with
-                    Simply Chocolate's selection of affordable treats. Enjoy
-                    mouth-watering truffles and velvety chocolate bars without
-                    sacrificing taste or quality. Browse our selection and indulge in
-                    affordable luxury today.
-                </p>
-          </li>
-          <li class="">
-              <div>
-                  <svg class="" width="" height="">
-                    <use href=""></use>
-                  </svg>
-                </div>
-                <h3 class="">Own production</h3>
-                <p class="">
-                    We take pride in our own production process, ensuring that every
-                    step is carefully crafted to perfection. From selecting the finest
-                    ingredients to handcrafting each piece, our attention to detail is
-                    evident in every bite.
-                </p>
-          </li>
-      </ul>
+<section class="advantages-section section">
+  <div class="advantages-container container">
+    <h2 class="visually-hidden">Advantages</h2>
+    <ul class="advantages-card-set list">
+      <li class="advantages-item after">
+        <div class="advantages-icons-container">
+          <svg class="advantages-icons" width="32" height="32">
+            <use href="./img/choco-icons.svg#icon-choco"></use>
+          </svg>
+        </div>
+        <h3 class="advantages-subtitle section-subtitle">Unsurpassed taste</h3>
+        <p class="advantages-text section-text">
+          Crafted with the finest quality cocoa beans and a dedication to
+          perfection, each bite is a decadent experience that simply cannot be
+          matched. Savor the richness and complexity of our Unsurpassed Taste
+          and discover a new level of chocolate bliss.
+        </p>
+      </li>
+      <li class="advantages-item advantages-after after">
+        <div class="advantages-icons-container">
+          <svg class="advantages-icons" width="32" height="32">
+            <use href="./img/choco-icons.svg#icon-coin"></use>
+          </svg>
+        </div>
+        <h3 class="advantages-subtitle section-subtitle">Affordable price</h3>
+        <p class="advantages-text section-text">
+          Indulge in high-quality chocolate without breaking the bank with
+          Simply Chocolate's selection of affordable treats. Enjoy
+          mouth-watering truffles and velvety chocolate bars without sacrificing
+          taste or quality. Browse our selection and indulge in affordable
+          luxury today.
+        </p>
+      </li>
+      <li class="advantages-item">
+        <div class="advantages-icons-container">
+          <svg class="advantages-icons" width="32" height="32">
+            <use href="./img/choco-icons.svg#icon-spoon"></use>
+          </svg>
+        </div>
+        <h3 class="advantages-subtitle section-subtitle">Own production</h3>
+        <p class="advantages-text section-text">
+          We take pride in our own production process, ensuring that every step
+          is carefully crafted to perfection. From selecting the finest
+          ingredients to handcrafting each piece, our attention to detail is
+          evident in every bite.
+        </p>
+      </li>
+    </ul>
   </div>
 </section>
