--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -1,45 +1,61 @@
 <div data-modal class="modal-mobile-menu" id="mobile-menu">
   <button type="button" class="close-button-mobile" data-modal-close>
     <svg class="mobile-icon-close">
-      <use href="./icon.svg#icon-x"></use>
+      <use href="../img/choco-icons.svg#icon-x-close"></use>
     </svg>
   </button>
 
-  <ul class="modal-mobile-list">
+  <ul class="modal-mobile-list list">
     <li>
-      <a class="mobile-menu-link mobile-menu-text link" href="./index.html"
+      <a
+        class="mobile-menu-link mobile-menu-text mobile-menu-line link"
+        href="./index.html"
         >Home</a
       >
     </li>
     <li>
-      <a class="mobile-menu-link mobile-menu-text link" href=""
+      <a class="mobile-menu-link mobile-menu-text mobile-menu-line link" href=""
         >How it’s made?</a
       >
     </li>
     <li>
-      <a class="mobile-menu-link mobile-menu-text link" href="">Our products</a>
+      <a class="mobile-menu-link mobile-menu-text mobile-menu-line link" href=""
+        >Our products</a
+      >
     </li>
     <li>
-      <a class="mobile-menu-link mobile-menu-text link" href="">Top sellers</a>
+      <a class="mobile-menu-link mobile-menu-text mobile-menu-line link" href=""
+        >Top sellers</a
+      >
     </li>
     <li>
-      <a class="mobile-menu-link mobile-menu-text link" href=""
+      <a class="mobile-menu-link mobile-menu-text mobile-menu-line link" href=""
         >Chocolate is loved</a
       >
     </li>
   </ul>
-  <ul class="mobile-menu-icon-list">
+  <ul class="mobile-menu-icon-list list">
     <li>
-      <a class="mobile-menu-icon-messeg" href="https://Instagram.com">
+      <a
+        class="mobile-menu-icon-messeg"
+        href="https://Instagram.com"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
         <svg class="mobile-menu-icon-svg">
-          <use href="./icon.svg#icon-instagram"></use>
+          <use href="../img/choco-icons.svg#icon-instagram"></use>
         </svg>
       </a>
     </li>
     <li>
-      <a class="mobile-menu-icon-messeg" href="https://Youtube.com">
+      <a
+        class="mobile-menu-icon-messeg"
+        href="https://Youtube.com"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
         <svg class="mobile-menu-icon-svg">
-          <use href="./icon.svg#icon-twitter"></use>
+          <use href="../img/choco-icons.svg#icon-twitter"></use>
         </svg>
       </a>
     </li>
