--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header>
+<header class="header-section">
   <div class="header-div container">
     <nav class="header-nav">
       <a class="logo header-link link" href="./index.html"
@@ -64,7 +64,7 @@
       aria-expanded="false"
       aria-controls="mobile-menu"
     >
-      <svg class="header-burger-menu" stroke="#111111">
+      <svg class="header-burger-menu">
         <use href="../img/choco-icons.svg#icon-burger-menu"></use>
       </svg>
     </button>
