--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,3 +1,8 @@
+.header-section {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .header-div {
   display: flex;
   padding-top: 20px;
@@ -19,10 +24,12 @@
 .header-icon-messeng:hover,
 .header-icon-messeng:focus {
   stroke: var(--accent-text-color);
+  transition: var(--transition-dur-and-func);
 }
 .header-burger-menu {
-  width: 25px;
-  max-height: 28px;
+  width: 28px;
+  height: 28px;
+  stroke: var(--main-dark-text-color);
 }
 
 .button-open-mobile {
@@ -57,6 +64,7 @@
 .header-nav-link:hover,
 .header-nav-link:focus {
   color: var(--accent-text-color);
+  transition: var(--transition-dur-and-func);
 }
 .header-icon-link {
   display: block;
@@ -80,14 +88,14 @@
     padding-top: 24px;
     padding-bottom: 24px;
   }
-}
-@media only screen and (min-width: 768hpx) {
-  .header-burger-menu {
-    width: 28px;
-    max-height: 32px;
+  .button-open-mobile {
+    width: 32px;
+    height: 32px;
   }
-}
-@media only screen and (min-width: 768px) {
+  .header-burger-menu {
+    width: 32px;
+    height: 32px;
+  }
   .butto-open-mobile {
     width: 32px;
     max-height: 32px;
@@ -100,37 +108,24 @@
     padding-top: 24px;
     padding-bottom: 32px;
   }
-}
-
-@media only screen and (min-width: 1200px) {
   .header-logo {
     width: 28px;
     max-height: 24px;
   }
-}
-@media only screen and (min-width: 1200px) {
   .button-open-mobile {
     display: none;
   }
-}
-@media only screen and (min-width: 1200px) {
   .header-link {
     font-size: 18px;
     line-height: 1.11;
     letter-spacing: -0.03em;
   }
-}
-@media only screen and (min-width: 1200px) {
   .header-link {
     margin-right: 190px;
   }
-}
-@media only screen and (min-width: 1200px) {
   .header-list {
     display: flex;
   }
-}
-@media only screen and (min-width: 1200px) {
   .header-list-messeng {
     display: flex;
   }
